Request, Property and Media done with auth