@@ -1,177 +1,166 @@
 package org.os.bayturabackend.services;
 
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
-import org.os.bayturabackend.DTOs.PropertyRequest;
-import org.os.bayturabackend.DTOs.PropertyResponse;
-import org.os.bayturabackend.entities.Property;
-import org.os.bayturabackend.entities.PropertyStatus;
-import org.os.bayturabackend.entities.Role;
-import org.os.bayturabackend.entities.User;
-import org.os.bayturabackend.repositories.MediaRepository;
+import org.os.bayturabackend.DTOs.PropertyRequestDTO;
+import org.os.bayturabackend.DTOs.PropertyResponseDTO;
+import org.os.bayturabackend.entities.*;
+import org.os.bayturabackend.exceptions.ForbiddenException;
+import org.os.bayturabackend.exceptions.ResourceNotFoundException;
+import org.os.bayturabackend.mappers.PropertyMapper;
 import org.os.bayturabackend.repositories.PropertyRepository;
 import org.os.bayturabackend.repositories.UserRepository;
+import org.os.bayturabackend.specifications.PropertySpecification;
+import org.springframework.data.jpa.domain.Specification;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 
+
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
 public class PropertyService {
     private final PropertyRepository propertyRepository;
-    private final MediaRepository mediaRepository;
+    private final PropertyMapper propertyMapper;
     private final UserRepository userRepository;
 
-    // get all property
-    public List<PropertyResponse> allProperties() {
-        List<Property> properties = propertyRepository.findAll();
-        List<PropertyResponse> responses = new ArrayList<>();
-
-        for (Property property : properties) {
-            responses.add(mapToDTO(property));
-        }
-        return responses;
-    }
-    // get property
-    public PropertyResponse getProperty(Long id) {
-        Property property = propertyRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Property not found"));
-        return mapToDTO(property);
-
-    }
-    public Property getPropertyEntity(Long id) {
-        Property property = propertyRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Property not found"));
-        return property;
-
-    }
-
-    // post property
-    public PropertyResponse createProperty(PropertyRequest propertyRequest) {
-        Property property = new Property();
-        property.setTitle(propertyRequest.getTitle());
-        property.setDescription(propertyRequest.getDescription());
-        property.setType(propertyRequest.getType());
-        property.setPrice(propertyRequest.getPrice());
-        property.setArea(propertyRequest.getArea());
-        property.setAddress(propertyRequest.getAddress());
-        property.setCreatedAt(LocalDateTime.now());
-        property.setUpdatedAt(LocalDateTime.now());
-        property.setLatitude(property.getLatitude());
-        property.setLongitude(property.getLongitude());
-
-
-        User owner = userRepository.findById(propertyRequest.getOwnerId())
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        property.setOwner(owner);
-
-        if (owner.getRole() == Role.CUSTOMER) {
-            property.setPropertyStatus(PropertyStatus.PENDING);
-        } else if (owner.getRole() == Role.ADMIN) {
-            property.setPropertyStatus(PropertyStatus.AVAILABLE);
-        }
-
-        Property saved = propertyRepository.save(property);
-        return mapToDTO(saved);
-    }
-
-
-    // update property
-    public PropertyResponse updateProperty(Long id, PropertyRequest propertyRequest) {
-        Property property  = propertyRepository.findById(id).orElseThrow(() -> new RuntimeException("Property not found"));
-        property.setTitle(propertyRequest.getTitle());
-        property.setDescription(propertyRequest.getDescription());
-        property.setType(propertyRequest.getType());
-        property.setPrice(propertyRequest.getPrice());
-        property.setArea(propertyRequest.getArea());
-
-        Property updated = propertyRepository.save(property);
-        return mapToDTO(updated);
-    }
-
-    // delete property
-    public String deleteProperty(Long id) {
-        propertyRepository.deleteById(id);
-        return "Property deleted successfully";
-    }
-
-    // set property available
-    public PropertyResponse makePropertyAvailable(Long id) {
-        Property property = propertyRepository.findById(id).orElseThrow(() -> new RuntimeException("Property not found"));
-        property.setPropertyStatus(PropertyStatus.AVAILABLE);
-        propertyRepository.save(property);
-        return mapToDTO(property);
-    }
-
-    // change property status
-    public PropertyResponse changeStatus(Long id, PropertyStatus status) {
-        Property property = propertyRepository.findById(id).orElseThrow(() -> new RuntimeException("Property not found"));
-        property.setPropertyStatus(status);
-        propertyRepository.save(property);
-        return mapToDTO(property);
-    }
-
-    public List<PropertyResponse> search(String query) {
-        String lowerCaseQuery = query.toLowerCase();
-        List<Property> properties = propertyRepository.findAll();
-
-        return properties.stream()
-                .filter(property ->
-                        property.getTitle().toLowerCase().contains(lowerCaseQuery) ||
-                                property.getDescription().toLowerCase().contains(lowerCaseQuery) ||
-                                property.getAddress().toLowerCase().contains(lowerCaseQuery)
-                ).map(property -> mapToDTO(property))
-                .collect(Collectors.toList());
-    }
-
-
-    public List<PropertyResponse> filter(
+    public List<PropertyResponseDTO> getProperties(
             String type,
+            String query,
             Double minPrice, Double maxPrice,
             Double minArea, Double maxArea,
-            String owner
+            String username
     ) {
-        List<Property> properties = propertyRepository.findAll();
+        Specification<Property> spec = PropertySpecification.buildSpec(
+                type, query, minPrice, maxPrice, minArea, maxArea, username
+        );
 
-        return properties.stream()
-                .filter(p -> type == null || p.getType().name().equalsIgnoreCase(type))
-                .filter(p -> (minPrice == null || p.getPrice() >= minPrice) &&
-                        (maxPrice == null || p.getPrice() <= maxPrice))
-                .filter(p -> (minArea == null || p.getArea() >= minArea) &&
-                        (maxArea == null || p.getArea() <= maxArea))
-                .filter(p -> owner == null ||
-                        (p.getOwner() != null &&
-                                ((p.getOwner().getFirstName() != null && p.getOwner().getFirstName().equalsIgnoreCase(owner)) ||
-                                        (p.getOwner().getLastName() != null && p.getOwner().getLastName().equalsIgnoreCase(owner)))
-                        )
-                )
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+        return propertyRepository.findAll(spec).stream()
+                .map(PropertyMapper::toDto)
+                .toList();
+    }
+
+
+    public PropertyResponseDTO getPropertyById(Long id) {
+        Property property = propertyRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Property with ID " + id + " not found"));
+
+        return PropertyMapper.toDto(property);
+    }
+
+
+    public List<PropertyResponseDTO> getMyProperties(Long ownerId) {
+        return propertyRepository
+                .findByOwner_UserId(ownerId)
+                .stream()
+                .map(PropertyMapper::toDto)
+                .toList();
+    }
+
+
+    public PropertyResponseDTO createProperty(PropertyRequestDTO request, Long ownerId) {
+        User user = userRepository.findById(ownerId)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+
+        if (!(user instanceof Provider provider) || !provider.getIsApproved()) {
+            throw new ForbiddenException("Provider not approved to create properties");
+        }
+
+        Property property = new Property();
+        property.setTitle(request.getTitle());
+        property.setDescription(request.getDescription());
+        property.setPrice(request.getPrice());
+        property.setArea(request.getArea());
+        property.setAddress(request.getAddress());
+        property.setLatitude(request.getLatitude());
+        property.setLongitude(request.getLongitude());
+        property.setType(PropertyType.valueOf(request.getType().toUpperCase()));
+        property.setOwner(provider);
+        property.setPropertyStatus(PropertyStatus.AVAILABLE);
+        property.setCreatedAt(LocalDateTime.now());
+        property.setUpdatedAt(LocalDateTime.now());
+
+        Property saved = propertyRepository.save(property);
+        return PropertyMapper.toDto(saved);
     }
 
 
 
-    public PropertyResponse mapToDTO(Property property) {
-        PropertyResponse dto = new PropertyResponse();
-        dto.setId(property.getId());
-        dto.setTitle(property.getTitle());
-        dto.setDescription(property.getDescription());
-        dto.setType(property.getType());
-        dto.setPrice(property.getPrice());
-        dto.setArea(property.getArea());
-        dto.setAddress(property.getAddress());
-        dto.setCreatedAt(property.getCreatedAt());
-        dto.setUpdatedAt(property.getUpdatedAt());
-        dto.setOwner(property.getOwner().getUserId());
-        dto.setPropertyStatus(property.getPropertyStatus());
-        dto.setLatitude(property.getLatitude());
-        dto.setLongitude(property.getLongitude());
-        dto.setImages(property.getImages());
-        return dto;
+
+    public PropertyResponseDTO updateProperty(
+            Long propertyId,
+            PropertyRequestDTO request,
+            Long ownerId) {
+        Property property = propertyRepository.findById(propertyId)
+                .orElseThrow(() -> new ResourceNotFoundException("Property not found"));
+
+        if (!property.getOwner().getUserId().equals(ownerId)) {
+            throw new AccessDeniedException("You are not allowed to update this property");
+        }
+
+        property.setTitle(request.getTitle());
+        property.setDescription(request.getDescription());
+        property.setPrice(request.getPrice());
+        property.setArea(request.getArea());
+        property.setAddress(request.getAddress());
+        property.setLatitude(request.getLatitude());
+        property.setLongitude(request.getLongitude());
+        property.setType(PropertyType.valueOf(request.getType().toUpperCase()));
+        property.setUpdatedAt(LocalDateTime.now());
+
+        Property saved = propertyRepository.save(property);
+        return PropertyMapper.toDto(saved);
     }
+
+
+    public PropertyResponseDTO updatePropertyStatus(
+            Long propertyId,
+            String status,
+            Long ownerId
+    ){
+        Property property = propertyRepository.findById(propertyId)
+                .orElseThrow(() -> new ResourceNotFoundException("Property not found"));
+        if (!property.getOwner().getUserId().equals(ownerId)) {
+            throw new AccessDeniedException("You are not allowed to update this property");
+        }
+        property.setPropertyStatus(PropertyStatus.valueOf(status.toUpperCase()));
+        Property saved = propertyRepository.save(property);
+        return PropertyMapper.toDto(saved);
+    }
+
+
+    public void deletePropertyOwner(
+            Long propertyId,
+            Long ownerId) {
+        Property property = propertyRepository.findById(propertyId)
+                .orElseThrow(() -> new ResourceNotFoundException("Property not found"));
+        if (!property.getOwner().getUserId().equals(ownerId)) {
+            throw new AccessDeniedException("You are not allowed to delete this property");
+        }
+        propertyRepository.delete(property);
+    }
+
+    public void deletePropertyAdmin(Long propertyId) {
+        Property property = propertyRepository.findById(propertyId)
+                .orElseThrow(() -> new ResourceNotFoundException("Property not found"));
+        propertyRepository.delete(property);
+    }
+
+
+
+
+
+//    // change property status
+//    public PropertyResponse changeStatus(Long id, PropertyStatus status) {
+//        Property property = propertyRepository.findById(id).orElseThrow(() -> new RuntimeException("Property not found"));
+//        property.setPropertyStatus(status);
+//        propertyRepository.save(property);
+//        return mapToDTO(property);
+//    }
+
 
 
 }
